log
Wed 24 Apr 2024 11:08:35 PM UTC: 
 tests:  0|6
total_score: 0/70
77fc718
Wed 24 Apr 2024 11:09:36 PM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a11f386
Wed 24 Apr 2024 11:12:35 PM UTC: 
 hashmap.c | 63 ++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 32 insertions(+), 31 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:15: error: ‘Pair’ has no member named ‘next’
   56 |     while (aux->next != NULL) {
      |               ^~
hashmap.c:57:16: error: ‘Pair’ has no member named ‘next’
   57 |       aux = aux->next;
      |                ^~
hashmap.c:59:8: error: ‘Pair’ has no member named ‘next’
   59 |     aux->next = par;
      |        ^~
Compilation failed
8e8483d
Wed 24 Apr 2024 11:13:27 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:15: error: ‘Pair’ has no member named ‘nextMap’
   56 |     while (aux->nextMap != NULL) {
      |               ^~
hashmap.c:57:16: error: ‘Pair’ has no member named ‘nextMap’
   57 |       aux = aux->nextMap;
      |                ^~
hashmap.c:59:8: error: ‘Pair’ has no member named ‘nextMap’
   59 |     aux->nextMap = par;
      |        ^~
Compilation failed
b58bf5c
Wed 24 Apr 2024 11:15:43 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:15: error: ‘Pair’ has no member named ‘nextMap’
   56 |     while (aux->nextMap != NULL) {
      |               ^~
hashmap.c:57:16: error: ‘Pair’ has no member named ‘nextMap’
   57 |       aux = aux->nextMap;
      |                ^~
hashmap.c:59:8: error: ‘Pair’ has no member named ‘nextMap’
   59 |     aux->nextMap = par;
      |        ^~
hashmap.c: In function ‘enlarge’:
hashmap.c:77:18: error: ‘Pair’ has no member named ‘nextMap’
   77 |         par = par->nextMap;
      |                  ^~
Compilation failed
56c1830
Wed 24 Apr 2024 11:19:00 PM UTC: 
 hashmap.c | 40 ++++++++++++----------------------------
 1 file changed, 12 insertions(+), 28 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:69:18: error: ‘Pair’ has no member named ‘nextMap’
   69 |         par = par->nextMap;
      |                  ^~
Compilation failed
d2e3a2b
Wed 24 Apr 2024 11:19:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:69:18: error: ‘Pair’ has no member named ‘next’
   69 |         par = par->next;
      |                  ^~
Compilation failed
3af7f81
Wed 24 Apr 2024 11:24:56 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:83:18: error: ‘Pair’ has no member named ‘next’
   83 |         par = par->next;
      |                  ^~
Compilation failed
17604d8
Wed 24 Apr 2024 11:25:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:83:18: error: ‘Pair’ has no member named ‘next’
   83 |         par = par->next;
      |                  ^~
Compilation failed
2f8d80e
Wed 24 Apr 2024 11:30:08 PM UTC: 
 hashmap.c | 29 ++++++++++++++++-------------
 1 file changed, 16 insertions(+), 13 deletions(-)
 tests:  0|0
abacbca
Wed 24 Apr 2024 11:32:27 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d8ce7d2
Wed 24 Apr 2024 11:34:39 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
fa8ca86
Wed 24 Apr 2024 11:34:58 PM UTC: 
 hashmap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  8|3
total_score: 40/70
f2f4410
Wed 24 Apr 2024 11:35:23 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
f7a987c
Wed 24 Apr 2024 11:35:34 PM UTC: 
 hashmap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  8|3
total_score: 40/70
d697668
Sat 27 Apr 2024 03:17:27 AM UTC: 
 hashmap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
 tests:  9|2
total_score: 50/70
bfd7533
Sat 27 Apr 2024 03:24:57 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:112:5: error: expected ‘)’ before ‘{’ token
  112 |     {
      |     ^
hashmap.c:111:9: note: to match this ‘(’
  111 |   while (map->current + 1 < map->capacity && map->buckets[map->current + 1] == NULL
      |         ^
hashmap.c:118:1: error: expected expression before ‘}’ token
  118 | }
      | ^
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f5fe97c
Sat 27 Apr 2024 03:31:04 AM UTC: 
 hashmap.c | 25 ++++++++++++++++++++-----
 1 file changed, 20 insertions(+), 5 deletions(-)
 tests:  12|1
total_score: 60/70
e020e10
Sat 27 Apr 2024 08:43:55 PM UTC: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:129:5: error: expected ‘)’ before ‘{’ token
  129 |     {
      |     ^
hashmap.c:128:9: note: to match this ‘(’
  128 |   while (map->buckets[map->current] == NULL || map->buckets[map->current]->key == NULL
      |         ^
hashmap.c:134:1: error: expected expression before ‘}’ token
  134 | }
      | ^
hashmap.c: In function ‘nextMap’:
hashmap.c:141:5: error: expected ‘)’ before ‘{’ token
  141 |     {
      |     ^
hashmap.c:140:9: note: to match this ‘(’
  140 |   while (map->buckets[map->current] == NULL || map->buckets[map->current]->key == NULL
      |         ^
hashmap.c:146:1: error: expected expression before ‘}’ token
  146 | }
      | ^
hashmap.c: In function ‘firstMap’:
hashmap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
hashmap.c: In function ‘nextMap’:
hashmap.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9fb84ff
Sat 27 Apr 2024 08:44:32 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c1f7478
